v1.0.0-beta/api/internal__plugin.editorplugin.md
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) &gt; [@edtr-io/internal\_\_plugin](./internal__plugin.md) &gt; [EditorPlugin](./internal__plugin.editorplugin.md)

## EditorPlugin interface

An Edtr.io plugin

<b>Signature:</b>

```typescript
export interface EditorPlugin<S extends StateType = StateType, Config extends {} = {}>
```

## Properties

| Property                                                  | Type                                                                       | Description                                                                                                          |
| --------------------------------------------------------- | -------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------- |
| [Component](./internal__plugin.editorplugin.component.md) | <code>React.ComponentType&lt;EditorPluginProps&lt;S, Config&gt;&gt;</code> | React component that will be used to render the plugin. It accepts \[\[PluginEditorProps\]\] and <code>Props</code>. |
| [config](./internal__plugin.editorplugin.config.md)       | <code>Config &#124; ((theme: Theme) =&gt; Config)</code>                   | Plugin configuration                                                                                                 |
| [state](./internal__plugin.editorplugin.state.md)         | <code>S</code>                                                             | \[\[StateType\]\] of the plugin                                                                                      |

## Methods

| Method                                                                                              | Description                                                                                                                                                                                 |
| --------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [insertChild(state, { previousSibling, document })](./internal__plugin.editorplugin.insertchild.md) | May be provided if the plugin is able to insert additional children                                                                                                                         |
| [isEmpty(state)](./internal__plugin.editorplugin.isempty.md)                                        | Will be used to decide if the plugin is empty (e.g. to decide whether we can safely delete the plugin). If not provided, we consider a plugin empty iff its state equals its initial state. |
| [onKeyDown(e)](./internal__plugin.editorplugin.onkeydown.md)                                        | May be provided to prevent the default Edtr.io keyboard shortcuts                                                                                                                           |
| [onPaste(data)](./internal__plugin.editorplugin.onpaste.md)                                         | May be provided to let the plugin respond to \[<code>paste</code> events\](https://developer.mozilla.org/docs/Web/API/Element/paste\_event)                                                 |
| [removeChild(state, id)](./internal__plugin.editorplugin.removechild.md)                            | May be provided if the plugin is able to remove its child                                                                                                                                   |
